* fix overlays covered by header

--- a/src/web/pcss/mess.pcss
+++ b/src/web/pcss/mess.pcss
@@ -150,15 +150,6 @@ i {
 
 /*mat css END*/
 
-.overlay {
-  position: fixed;
-  top: 0;
-  left: 0;
-  width: 100vw;
-  height: 100vh;
-
-  background-color: rgba(0, 0, 0, 0.3);
-}
 
 .notification.overlay {
   background-color: transparent;
@@ -309,7 +300,8 @@ paper-item, .has-hover-elements {
 }
 
 #popup-menu {
-  position: absolute;
+  //position: absolute;
+  position: fixed;
   overflow-y: scroll;
   overflow-x: hidden;
   max-height: 100vh;
